--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@types/prop-types": "^15.7.14",
     "bootstrap": "^5.3.3",
     "core-js": "^3.41.0",
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
