--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+#config files
+.backend/config/schoolr-32521-firebase-adminsdk-fbsvc-fe74339684.json
