--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,43 +1,47 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@coreui/chartjs": "^4.0.0",
-    "@coreui/coreui": "^5.2.0",
-    "@coreui/icons": "^3.0.1",
-    "@coreui/icons-react": "^2.3.0",
-    "@coreui/react": "^5.5.0",
-    "@coreui/react-chartjs": "^3.0.0",
-    "@types/prop-types": "^15.7.14",
-    "bootstrap": "^5.3.3",
-    "core-js": "^3.41.0",
-    "date-fns": "^4.1.0",
-    "react": "^19.0.0",
-    "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.4.0",
-    "redux": "^5.0.1",
-    "sass": "^1.86.0",
-    "simplebar-react": "^3.3.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "vite": "^6.2.0"
-  }
+	"name": "frontend",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"proxy": "http://localhost:5000",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@coreui/chartjs": "^4.0.0",
+		"@coreui/coreui": "^5.2.0",
+		"@coreui/icons": "^3.0.1",
+		"@coreui/icons-react": "^2.3.0",
+		"@coreui/react": "^5.5.0",
+		"@coreui/react-chartjs": "^3.0.0",
+		"@react-oauth/google": "^0.12.1",
+		"@reduxjs/toolkit": "^2.6.1",
+		"@types/prop-types": "^15.7.14",
+		"axios": "^1.8.4",
+		"bootstrap": "^5.3.3",
+		"core-js": "^3.41.0",
+		"date-fns": "^4.1.0",
+		"react": "^19.0.0",
+		"react-bootstrap": "^2.10.9",
+		"react-dom": "^19.0.0",
+		"react-redux": "^9.2.0",
+		"react-router-dom": "^7.4.0",
+		"redux": "^5.0.1",
+		"sass": "^1.86.0",
+		"simplebar-react": "^3.3.0"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.21.0",
+		"@types/react": "^19.0.10",
+		"@types/react-dom": "^19.0.4",
+		"@vitejs/plugin-react": "^4.3.4",
+		"eslint": "^9.21.0",
+		"eslint-plugin-react-hooks": "^5.1.0",
+		"eslint-plugin-react-refresh": "^0.4.19",
+		"globals": "^15.15.0",
+		"vite": "^6.2.0"
+	}
 }
