--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,9 @@
     "mongoose": "^8.14.0",
     "multer": "^1.4.5-lts.2",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
