--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 		"@react-oauth/google": "^0.12.1",
 		"@reduxjs/toolkit": "^2.6.1",
 		"@types/prop-types": "^15.7.14",
+		"animate.css": "^4.1.1",
 		"axios": "^1.8.4",
 		"bootstrap": "^5.3.3",
 		"core-js": "^3.41.0",
@@ -31,7 +32,9 @@
 		"react-router-dom": "^7.4.0",
 		"redux": "^5.0.1",
 		"sass": "^1.86.0",
-		"simplebar-react": "^3.3.0"
+		"simplebar-react": "^3.3.0",
+		"socket.io-client": "^4.8.1",
+		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.21.0",
