API keys removed

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,4 @@ dist
 
 #config files
 .backend/config/schoolr-32521-firebase-adminsdk-fbsvc-fe74339684.json
+client_secret_295004313535-i5q6bfoim5nbeufj23n1njm8bc8ncejs.apps.googleusercontent.com.json
