--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,8 @@
 		"sass": "^1.86.0",
 		"simplebar-react": "^3.3.0",
 		"socket.io-client": "^4.8.1",
-		"uuid": "^11.1.0"
+		"uuid": "^11.1.0",
+		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.21.0",
