--- a/backend/package.json
+++ b/backend/package.json
@@ -21,9 +21,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0",
     "multer": "^1.4.5-lts.2",
+    "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.8.1",
+    "stripe": "^18.1.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
