--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,10 +23,12 @@
 		"animate.css": "^4.1.1",
 		"axios": "^1.8.4",
 		"bootstrap": "^5.3.3",
+		"chart.js": "^4.4.9",
 		"core-js": "^3.41.0",
 		"date-fns": "^4.1.0",
 		"react": "^19.0.0",
 		"react-bootstrap": "^2.10.9",
+		"react-chartjs-2": "^5.3.0",
 		"react-dom": "^19.0.0",
 		"react-redux": "^9.2.0",
 		"react-router-dom": "^7.4.0",
